--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -8,3 +8,9 @@
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
   background-color: white;
 }
+.cart-status {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  text-decoration: none;
+}
