--- a/src/Components/header/header.css
+++ b/src/Components/header/header.css
@@ -1,4 +1,3 @@
-
 .m-icons {
   font-size: 30px;
   color: rgba(113, 72, 114, 0.63);
@@ -7,7 +6,7 @@
   color: rgba(68, 201, 224, 0.63);
 }
 .nav-title {
-  font-family: 'Caveat', cursive;
+  font-family: "Caveat", cursive;
   font-size: 20px;
 }
 .mx-2:hover {
