--- a/src/Components/products/card.css
+++ b/src/Components/products/card.css
@@ -1,5 +1,5 @@
 .card {
-  font-family: 'Caveat', cursive;
+  font-family: "Caveat", cursive;
   position: relative;
   overflow: hidden;
   margin: 0 auto;
@@ -9,7 +9,7 @@
   color: #333;
   text-align: left;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-  }
+}
 .card * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -31,16 +31,15 @@
   right: 100%;
   border-style: solid;
   border-width: 0 12px 40px 0;
-  border-color: transparent  #2473a486 transparent;
-  content: '';
+  border-color: transparent #2473a486 transparent;
+  content: "";
   top: 0;
-} 
-.card-img:hover
-  {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-    cursor: pointer;
-  }
+}
+.card-img:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  cursor: pointer;
+}
 .card-img__wrapper {
   height: 218px;
   overflow: hidden;
@@ -51,7 +50,7 @@
 .card-img__wrapper {
   max-height: 250px;
 }
-@media (max-width: 767px){
+@media (max-width: 767px) {
   .card-img__wrapper {
     height: 300px;
   }
