--- a/src/Components/header/header.css
+++ b/src/Components/header/header.css
@@ -1,6 +1,6 @@
 .m-icons {
   font-size: 30px;
-  color: rgba(113, 72, 114, 0.63);
+  color: rgb(133, 114, 151);
 }
 .m-icons:hover {
   color: rgba(68, 201, 224, 0.63);
@@ -17,4 +17,8 @@
   top: -6.5px;
   right: -15px;
   text-decoration: none;
+}
+.navbar {
+  background-color: #f5f5f5ef;
+  
 }
