--- a/src/Pages/details.css
+++ b/src/Pages/details.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   min-height: 80vh;
+  margin-top: 100px;
 }
 .details-container {
   position: relative;
