--- a/src/Components/cart/cart.css
+++ b/src/Components/cart/cart.css
@@ -11,6 +11,15 @@
 .pointer {
   cursor: pointer;
 }
+.cart-form{
+max-width: 380px;
+margin: 0 auto;
+padding-top: 40px;
+}
+.cart-content{
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
 @media (max-width: 767px) {
   .d-none {
     display: none;
