--- a/src/Components/form/form.css
+++ b/src/Components/form/form.css
@@ -16,7 +16,7 @@ input[type="text"] {
   border-style: solid;
   border-radius: 0;
   width: 100%;
-  max-width: 300px;
+  max-width: 500px;
   font-size: 14px;
   padding: 6px 10px;
   box-sizing: border-box;
@@ -25,6 +25,15 @@ input[type="text"] {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
   height: 32px;
   line-height: 1.3;
+}
+.text-area{
+  resize: none;
+  width: 100%;
+  height: 100px;
+  padding: 0 10px;
+}
+.text-area::placeholder{
+  color: rgb(24, 67, 80);
 }
 .wrapper {
   margin: 0 auto;
