--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -1,8 +1,8 @@
-.home {
+/* .home {
   background-image: url(./mainbg.jpg);
   height: 950px;
   background-size: cover;
-}
+} */
 .home-title {
   font-size: 7vw;
   color: #004175;
@@ -28,4 +28,3 @@
   margin: 0 auto;
   padding-top: 56px;
 }
-
