--- a/src/Components/instagram/insta.css
+++ b/src/Components/instagram/insta.css
@@ -1,18 +1,23 @@
 
+.insta__inner {
+  margin: 8px 0;
+}
 .insta__inner img{
   max-height: 200px;
   max-width: 200px;
   margin: 10px 10px;
+  transition: 1s ease;
 }
 .insta__inner img:hover{
   cursor: pointer;
+  transform: scale(0.9);
 }
 .insta-page{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  border-bottom: 1px solid #ebebeb;;
-  border-top: 1px solid #ebebeb;;
+  border-bottom: 1.5px solid #ebebeb;
+  border-top: 1.3px solid #ebebeb;
   padding: 20px 0;
   margin: 60px 0;
   width: 100%;
