--- a/src/Components/cart/cart.css
+++ b/src/Components/cart/cart.css
@@ -1,3 +1,6 @@
+.cart__inner {
+  margin-top: 100px;
+}
 .cart-btn {
   width: 30px;
   height: 30px;
@@ -17,7 +20,7 @@ margin: 0 auto;
 padding-top: 40px;
 }
 .cart-content{
-  margin-top: 40px;
+  margin-top: 120px;
   margin-bottom: 40px;
 }
 @media (max-width: 767px) {
