--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -1,21 +1,23 @@
+.home__inner{
+  background: url(./mainbg.jpg) center;
+  background-size: cover;
+  height: 100vh;
+  
+}
 .home-title {
   font-size: 7vw;
   color: #004175;
   font-weight: bold;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-align: center;
-}
-.title-wrap {
-  max-width: 400px;
-  margin: 0 auto;
-  padding-top: 162px;
+  padding-top: 160px;
 }
 .home-subtitle {
-  font-size: 8vw;
-  color: #d10a51;
-  text-transform: uppercase;
-  font-weight: bold;
+  font-size: 24px;
+  color: #0a93ac;
   font-family: "Caveat";
+  max-width: 360px;
+  margin: 0 auto;
   text-align: center;
 }
 .subtitle-wrap {
